--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "imap-simple": "^5.1.0",
+    "mailslurp-client": "^15.16.0",
     "nodemailer": "^8.0.1",
     "openai": "^4.20.1",
     "tesseract.js": "^7.0.0"
