feat(tests): add contractor registration with OTP verification test
- Implemented a new test for contractor registration that includes OTP verification.
- The test covers login, OTP retrieval from email, onboarding steps, and final dashboard verification.
- Enhanced email service utility to support fetching OTP from email body instead of attachments.
- Updated global setup to skip authentication for registration and auth tests.
- Improved error handling and logging throughout the test for better traceability.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:data-driven": "playwright test tests/data-driven-tests.spec.js --headed",
     "test:all": "playwright test",
     "test:auth": "playwright test tests/auth/",
+    "test:registration": "playwright test tests/auth/registration-with-otp.spec.js --headed",
     "test:users": "playwright test tests/modules/users.spec.js",
     "test:modules": "playwright test tests/modules/",
     "test:headed": "playwright test --headed",
