--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "imap-simple": "^5.1.0",
+    "imapflow": "^1.2.9",
+    "mailparser": "^3.9.3",
     "mailslurp-client": "^15.16.0",
     "nodemailer": "^8.0.1",
     "openai": "^4.20.1",
