feat(tests): add beta registration, project creation, and contractor login tests

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "test:all": "playwright test",
     "test:auth": "playwright test tests/auth/",
     "test:registration": "playwright test tests/auth/registration-with-otp.spec.js --headed",
+    "test:beta-register": "playwright test tests/auth/beta-registration-onboarding.spec.js --project=auth --headed",
+    "test:beta-project": "playwright test tests/auth/beta-create-project.spec.js --project=auth --headed",
+    "test:beta-invite": "playwright test tests/auth/contractor-login-with-member-invite.spec.js --project=auth --headed",
     "test:users": "playwright test tests/modules/users.spec.js",
     "test:modules": "playwright test tests/modules/",
     "test:headed": "playwright test --headed",
