--- a/package.json
+++ b/package.json
@@ -13,8 +13,17 @@
     "test:auth": "playwright test tests/auth/",
     "test:registration": "playwright test tests/auth/registration-with-otp.spec.js --headed",
     "test:beta-register": "playwright test tests/auth/beta-registration-onboarding.spec.js --project=auth --headed",
+    "test:gc-invite": "playwright test tests/auth/gc-invite-members.spec.js --project=auth --headed",
+    "test:gc-flow": "playwright test --project=gc-invite --headed",
+    "test:gc-accept": "playwright test tests/auth/accept-invitations-gc.spec.js --project=auth --headed",
+    "test:gc-full-flow": "playwright test --project=gc-accept --headed",
     "test:beta-project": "playwright test tests/auth/beta-create-project.spec.js --project=auth --headed",
     "test:beta-invite": "playwright test tests/auth/contractor-login-with-member-invite.spec.js --project=auth --headed",
+    "test:register-gmail": "playwright test tests/auth/register-gmail-account.spec.js --project=auth --headed",
+    "test:register-members": "playwright test tests/auth/register-all-members.spec.js --project=auth --headed",
+    "test:owner-invite": "playwright test tests/auth/owner-invite-members.spec.js --project=auth --headed",
+    "test:accept-invitations": "playwright test tests/auth/accept-invitations.spec.js --project=auth --headed",
+    "test:full-flow": "playwright test tests/auth/register-all-members.spec.js tests/auth/owner-invite-members.spec.js tests/auth/accept-invitations.spec.js --project=auth --headed --workers=1",
     "test:users": "playwright test tests/modules/users.spec.js",
     "test:modules": "playwright test tests/modules/",
     "test:headed": "playwright test --headed",
