feat: add tests for invite acceptance and member addition to project
- Implemented a test script to extract invite data from Gmail for multiple members.
- Updated the acceptance test to handle OTP and password setting during onboarding.
- Created a new test for adding accepted members to a project with role assignments.
- Enhanced the Gmail invite reader to extract both invite links and OTP codes from emails.
- Updated global setup to skip tests related to acceptance and member addition.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test:gc-invite": "playwright test tests/auth/gc-invite-members.spec.js --project=auth --headed",
     "test:gc-flow": "playwright test --project=gc-invite --headed",
     "test:gc-accept": "playwright test tests/auth/accept-invitations-gc.spec.js --project=auth --headed",
-    "test:gc-full-flow": "playwright test --project=gc-accept --headed",
+    "test:gc-add-to-project": "playwright test tests/auth/gc-add-members-to-project.spec.js --project=auth --headed",
+    "test:gc-full-flow": "playwright test --project=gc-add-to-project --headed",
     "test:beta-project": "playwright test tests/auth/beta-create-project.spec.js --project=auth --headed",
     "test:beta-invite": "playwright test tests/auth/contractor-login-with-member-invite.spec.js --project=auth --headed",
     "test:register-gmail": "playwright test tests/auth/register-gmail-account.spec.js --project=auth --headed",
