full project setup with all members onboard done

--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "test:gc-flow": "playwright test --project=gc-invite --headed",
     "test:gc-accept": "playwright test tests/auth/accept-invitations-gc.spec.js --project=auth --headed",
     "test:gc-add-to-project": "playwright test tests/auth/gc-add-members-to-project.spec.js --project=auth --headed",
-    "test:gc-full-flow": "playwright test --project=gc-add-to-project --headed",
+    "test:gc-members-accept-project": "playwright test tests/auth/members-accept-project.spec.js --project=gc-members-accept-project --headed --no-deps",
+    "test:gc-invite-owner": "playwright test tests/auth/gc-invite-owner.spec.js --project=auth --headed",
+    "test:gc-owner-accept": "playwright test tests/auth/accept-owner-invitation.spec.js --project=auth --headed",
+    "test:gc-full-flow": "playwright test --project=gc-owner-accept --headed",
     "test:beta-project": "playwright test tests/auth/beta-create-project.spec.js --project=auth --headed",
     "test:users": "playwright test tests/modules/users.spec.js",
     "test:modules": "playwright test tests/modules/",
