--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "test:gc-invite-owner": "playwright test tests/auth/gc-invite-owner.spec.js --project=auth --headed",
     "test:gc-owner-accept": "playwright test tests/auth/accept-owner-invitation.spec.js --project=auth --headed",
     "test:gc-full-flow": "playwright test --project=gc-owner-accept --headed",
+    "test:sov-gc-login": "playwright test tests/modules/gc-login.spec.js --project=sov-gc-login --headed --no-deps",
+    "test:sov-create": "playwright test tests/modules/create-sov.spec.js --project=sov-create --headed --no-deps",
+    "test:sov-owner-login": "playwright test tests/modules/owner-login.spec.js --project=sov-owner-login --headed --no-deps",
+    "test:sov-approve": "playwright test tests/modules/approve-sov.spec.js --project=sov-approve --headed --no-deps",
+    "test:sov-flow": "playwright test --project=sov-approve --headed",
     "test:beta-project": "playwright test tests/auth/beta-create-project.spec.js --project=auth --headed",
     "test:users": "playwright test tests/modules/users.spec.js",
     "test:modules": "playwright test tests/modules/",
