--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test:gc-members-accept-project": "playwright test tests/auth/members-accept-project.spec.js --project=gc-members-accept-project --headed --no-deps",
     "test:gc-invite-owner": "playwright test tests/auth/gc-invite-owner.spec.js --project=auth --headed",
     "test:gc-owner-accept": "playwright test tests/auth/accept-owner-invitation.spec.js --project=auth --headed",
-    "test:gc-full-flow": "playwright test --project=gc-owner-accept --headed",
+    "test:gc-invite-subcontractor": "playwright test tests/auth/gc-invite-subcontractor.spec.js --project=gc-invite-subcontractor --headed --no-deps",
+    "test:gc-subcontractor-accept": "playwright test tests/auth/accept-subcontractor-invitation.spec.js --project=gc-subcontractor-accept --headed --no-deps",
+    "test:gc-full-flow": "playwright test --project=gc-subcontractor-accept --headed",
     "test:sov-gc-login": "playwright test tests/modules/gc-login.spec.js --project=sov-gc-login --headed --no-deps",
     "test:sov-create": "playwright test tests/modules/create-sov.spec.js --project=sov-create --headed --no-deps",
     "test:sov-owner-login": "playwright test tests/modules/owner-login.spec.js --project=sov-owner-login --headed --no-deps",
