--- a/package.json
+++ b/package.json
@@ -4,36 +4,23 @@
   "description": "AI-powered automation testing framework for SuperConstruct",
   "main": "index.js",
   "scripts": {
-    "setup": "node scripts/setup.js",
-    "postinstall": "node scripts/setup.js",
-    "test:smoke": "playwright test tests/smoke-test.spec.js --headed",
-    "test:functional": "playwright test tests/comprehensive-functional.spec.js --headed",
-    "test:data-driven": "playwright test tests/data-driven-tests.spec.js --headed",
-    "test:all": "playwright test",
-    "test:auth": "playwright test tests/auth/",
-    "test:beta-register": "playwright test tests/auth/beta-registration-onboarding.spec.js --project=auth --headed",
-    "test:gc-invite": "playwright test tests/auth/gc-invite-members.spec.js --project=auth --headed",
-    "test:gc-flow": "playwright test --project=gc-invite --headed",
-    "test:gc-accept": "playwright test tests/auth/accept-invitations-gc.spec.js --project=auth --headed",
-    "test:gc-add-to-project": "playwright test tests/auth/gc-add-members-to-project.spec.js --project=auth --headed",
+    "test:gc-full-flow": "playwright test --project=gc-subcontractor-accept --headed",
+    "test:gc-register": "playwright test tests/auth/beta-registration-onboarding.spec.js --project=gc-register --headed --no-deps",
+    "test:gc-project": "playwright test tests/auth/beta-create-project.spec.js --project=gc-project --headed --no-deps",
+    "test:gc-invite": "playwright test tests/auth/gc-invite-members.spec.js --project=gc-invite --headed --no-deps",
+    "test:gc-accept": "playwright test tests/auth/accept-invitations-gc.spec.js --project=gc-accept --headed --no-deps",
+    "test:gc-add-to-project": "playwright test tests/auth/gc-add-members-to-project.spec.js --project=gc-add-to-project --headed --no-deps",
     "test:gc-members-accept-project": "playwright test tests/auth/members-accept-project.spec.js --project=gc-members-accept-project --headed --no-deps",
-    "test:gc-invite-owner": "playwright test tests/auth/gc-invite-owner.spec.js --project=auth --headed",
-    "test:gc-owner-accept": "playwright test tests/auth/accept-owner-invitation.spec.js --project=auth --headed",
+    "test:gc-invite-owner": "playwright test tests/auth/gc-invite-owner.spec.js --project=gc-invite-owner --headed --no-deps",
+    "test:gc-owner-accept": "playwright test tests/auth/accept-owner-invitation.spec.js --project=gc-owner-accept --headed --no-deps",
     "test:gc-invite-subcontractor": "playwright test tests/auth/gc-invite-subcontractor.spec.js --project=gc-invite-subcontractor --headed --no-deps",
     "test:gc-subcontractor-accept": "playwright test tests/auth/accept-subcontractor-invitation.spec.js --project=gc-subcontractor-accept --headed --no-deps",
-    "test:gc-full-flow": "playwright test --project=gc-subcontractor-accept --headed",
+    "test:sov-flow": "playwright test --project=sov-approve --headed",
     "test:sov-gc-login": "playwright test tests/modules/gc-login.spec.js --project=sov-gc-login --headed --no-deps",
     "test:sov-create": "playwright test tests/modules/create-sov.spec.js --project=sov-create --headed --no-deps",
     "test:sov-owner-login": "playwright test tests/modules/owner-login.spec.js --project=sov-owner-login --headed --no-deps",
     "test:sov-approve": "playwright test tests/modules/approve-sov.spec.js --project=sov-approve --headed --no-deps",
-    "test:sov-flow": "playwright test --project=sov-approve --headed",
-    "test:beta-project": "playwright test tests/auth/beta-create-project.spec.js --project=auth --headed",
-    "test:users": "playwright test tests/modules/users.spec.js",
-    "test:modules": "playwright test tests/modules/",
-    "test:headed": "playwright test --headed",
-    "test:debug": "playwright test --debug",
     "report": "playwright show-report reports/html-report",
-    "dashboard": "node dashboard/server.js",
     "install:browsers": "playwright install chromium"
   },
   "keywords": [
@@ -47,16 +34,11 @@
   "license": "MIT",
   "dependencies": {
     "@playwright/test": "^1.40.1",
-    "axios": "^1.6.2",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
     "imap-simple": "^5.1.0",
     "imapflow": "^1.2.9",
     "mailparser": "^3.9.3",
-    "mailslurp-client": "^15.16.0",
-    "nodemailer": "^8.0.1",
-    "openai": "^4.20.1",
-    "tesseract.js": "^7.0.0"
+    "nodemailer": "^8.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.5"
